<?xml version="1.0"?>
<package format="2">
  <name>autocycle_extras</name>
  <version>0.1.0</version>
  <description>This package is responsible for managing communication between different aspects of navigation for Otto Von Cycle</description>
  <maintainer email="andoniesanguesa@gmail.com">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
